# jxl

./: .gitignore  README.md  SAMPLES.md  pyproject.toml  ruff.toml
assets/meta/: a2d_info.json  d2d_cfg.json  m101.json  m31.json
assets/oai/: glm_flashx.json  qwen_14b.json  qwen_flash.json  qwen_ocr_plus.json  qwen_plus.json  qwen_vl_7b.json  qwen_vl_max.json  qwen_vl_plus.json
assets/oai/doubao/: vl.json
assets/oai/glm/: flashx.json
assets/oai/qwen/: 14b.json  flash.json  ocr_plus.json  plus.json  vl_7b.json  vl_max.json  vl_plus.json
jxl/: README.md  common.py  task_s4.py  yolo_track_service.py
jxl/auto/: .gitignore  AUTO.md  gluon1.py  gluon2.py  tab_data
jxl/auto/test/: pd_test.py
jxl/cls/: classifier.py  classifier_tab.py  classifier_tch.py  classifier_y8.py  common.py  dataset.py  dataset_checker.py
jxl/cls/arch/: mxnet_image.py  torch_image.py  torch_image_test.py
jxl/cls/test/: classifier_tab_test.py  classifier_tch_test.py  classifier_test.py
jxl/det/: DETECTION.md  a2d.py  d2d.py  idetector.py  idetector_test.py
jxl/det/mm/: mm1.py  predict1.py
jxl/det/yolo/: a2d_yolo.py  adapter.py  d2d_yolo.py  detector_y8.py  detector_y8_test.py  test_iou.py
jxl/det/yolo_old/: detector_y8.py  detector_y8_test.py  idetector_old.py
jxl/io/: draw.py  draw_test.py  video.py
jxl/iqa/: IQA.md  a.py  color.py  diag_extractor.py  sharpness.py
jxl/iqa/test/: diag_extractor_test.py
jxl/label/: README.md  blend.py  darknet.py  extractor.py  extractor2.py  factory.py  hop.py  ias.py  info.py  io.py  kitti.py  label_set.py  meta.py  prop.py  tile.py  tile_s4.py  viewer.py
jxl/label/a2d/: dd.py  label_set.py  result_set.py
jxl/label/coco/: _labelme.py  coco-to-darknet.py  coco-view.py  coco.py  labelme-filter.py  labelme-to-coco.py
jxl/label/darknet/: darknet_dir.py  darknet_set.py  info.py
jxl/label/test/: blend_test.py  darknet_test.py  demo.kitti  extractor2_test.py  extractor_test.py  hop_test.py  ias_test.py  info_test.py  label_set_test.py  meta_test.py  tile_test.py
jxl/model/: pool.py  types.py  util.py
jxl/od/: classifier_od.py  pyod_demo.py  resnet_test.py
jxl/od/test/: classifier_od_test.py
jxl/seg/: iseg.py  mask_res.py
jxl/seg/cd/: cutter2.py  open_cd.py
jxl/track/: iou_tracker.py
jxl/util/: torch_jit.py  trans_test.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
script/: build-exe.sh  d2d-label.sh  jml-train-get-tab.sh  jml-train-get.sh  jml-train-ic.sh  s4-d2d-label.sh  s4-detect.sh  s4-train-det.sh  s4-train-valid.sh  y8-train.sh
src/jxl/: common.py
tests/: consts.py
tests/det/: a2d.py  d2d_test.py
tests/label/: darknet_test.py  extractor2_test.py  hop_test.py  ias_test.py  info_test.py  label_set_test.py  meta_test.py  tile_test.py
(+79 files in other folders)
