[project]
name = "jxl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = "~=3.12"
dependencies = [
    "jcx @ file:///home/jiang/py/jcx",
    "jvi @ file:///home/jiang/py/jvi",

    "rustshed",
    "pydantic",
    "typer",
    "loguru",
    "ultralytics",
    "onnxruntime",
    "onnx",
]

[project.scripts]
#jxl = "jxl:main"
jxl_label = "jxl.bin.jxl_label:main"
jxl_prop = "jxl.bin.jxl_prop:main"
jxl_sample = "jxl.bin.jxl_sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
