[project]
name = "jxl"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dayn9t", email = "dayn9t@gmail.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "jcx @ file:///home/jiang/py/jcx",
    "jvi @ file:///home/jiang/py/jvi",
    "rustshed",
    "pydantic",
    "typer",
    "loguru",
    "ultralytics",
    "lap", # for ultralytics
    "numpy", # for ultralytics
    "onnxruntime",
    "onnx",
    "opencv_python",

    "torch>=2.8.0",
    "torchvision>=0.23.0"
]

[dependency-groups]
dev = [
    "nuitka",
    "pytest",
]

[project.scripts]
jxl_label = "jxl.bin.jxl_label:main"
jxl_prop = "jxl.bin.jxl_prop:main"
jxl_sample = "jxl.bin.jxl_sample:main"
d2d_label = "jxl.bin.d2d_label:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

